2.1.6 (2023-06-12)
-----------------------------
* Deltabest Widget
    - Add "delta_display_range" option,
      which sets max display range (gain or loss) in seconds
      for delta reading, accepts decimal place.
      Default value is "99.999" seconds.

* Fuel Widget
    - Add "*early" option, which shows estimate number of pit stop counts
      when making an early pit stop at end of current lap.
      This value can be used to determine whether an early pit stop
      is worth performing comparing to "pits" value.
      More example usage and explanation in user guide.
    - Add "show_refueling_level_mark" option,
      which shows estimated fuel level after refueling.
      If the mark is not visible on fuel level bar,
      it indicates total refueling has exceeded fuel tank capacity.
      Default mark color is green.
    - Add "decimal_places" options for each individual fuel info.
      Maximum value is limited to "3".
    - Add "bar_width" options, which sets each column width in chars.
      Default value is "5". Minimum width is limited to "3".
    - Add "caption_text" options, which sets custom caption text.
    - Renamed several fuel options for consistency.
    - Removed "*start" option and starting fuel reading.

* Fuel Module
    - Add early pit stop calculation.
    - Improved calculation accuracy under certain conditions.
    - Exclude delta fuel calculation from estimated fuel consumption reading
      while vehicle is in garage stall.

* Force Module
    - Use standard deviation for max average g force comparison.

* Misc
    - Updated user guide with new options for Fuel Widget.

2.1.5 (2023-06-04)
-----------------------------
* Fuel Widget
    - Fixed a display issue with very large number formatting.

* Pedal Widget
    - Add "enable_horizontal_style" option,
      which shows pedal bar in horizontal style.
      This option is disabled by default.
    - Add "inner_gap" option,
      which sets gap between pedal and max indicator.