@@ -342,6 +342,7 @@ SETTING_DEFAULT = {
         "bkg_color_pit_timer": "#22EE22",
         "font_color_pit_timer_stopped": "#000000",
         "bkg_color_pit_timer_stopped": "#DDDDDD",
+        "pit_closed_text": "P CLOSE",
         "font_color_pit_closed": "#000000",
         "bkg_color_pit_closed": "#FF2200",
         "show_low_fuel": True,
@@ -370,12 +371,18 @@ SETTING_DEFAULT = {
         "font_color_startlights": "#000000",
         "bkg_color_red_lights": "#FF2200",
         "bkg_color_green_flag": "#00FF00",
+        "show_traffic": True,
+        "traffic_maximum_time_gap": 15,
+        "traffic_pitout_duration": 10,
+        "font_color_traffic": "#FFFFFF",
+        "bkg_color_traffic": "#4444FF",
         "column_index_pit_timer": 1,
         "column_index_low_fuel": 2,
         "column_index_speed_limiter": 3,
         "column_index_yellow_flag": 4,
         "column_index_blue_flag": 5,
         "column_index_startlights": 6,
+        "column_index_traffic": 7,
     },
     "force": {
         "enable": True,
